@@ -1,24 +1,10 @@
 {
-  "timestamp" : "2022-06-16T16:10:47Z",
-  "count_outdated" : 1611,
-  "uniques_outdated" : 93,
-  "count" : 1657,
+  "timestamp" : "2022-06-17T00:36:15Z",
+  "count_outdated" : 1624,
+  "uniques_outdated" : 95,
+  "count" : 1661,
   "uniques" : 103,
   "views" : [
-    {
-      "timestamp": "2022-06-02T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 7 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-06-03T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 16,
