@@ -1,17 +1,7 @@
 {
-  "count": 46,
+  "count": 37,
   "uniques": 3,
   "views": [
-    {
-      "timestamp": "2022-06-02T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2022-06-03T00:00:00Z",
-      "count": 6,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 16,
